# medscribe

./: .gitignore  CLAUDE.md  README.md  STATUS.md  TASKS.md  pyproject.toml
demo/: app.py
docs/: agent.md  architecture.md  configuration.md  demo.md  evaluation.md  gateway.md  getting-started.md  index.md  models.md  pipeline.md
eval/: benchmark.py  test_cases.json
notebooks/: 01_setup.ipynb  02_kaggle_medgemma.ipynb
sandbox_tests/: test_integration.py
src/: __init__.py
src/agent/: __init__.py  gap_filler.py  orchestrator.py  tools.py  validator.py
src/gateway/: app.py
src/models/: __init__.py  medgemma.py
src/models/prompts/: reasoning.yaml
src/pipeline/: __init__.py  coding_pipeline.py
